Fixed some of the styling issues with the front page on mobile

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -67,7 +67,6 @@ html {
     position: relative;
     width: 50%;
     background-color: #fff5;
-    min-width: 300px;
 }
 
 .square:after {
@@ -123,7 +122,7 @@ html {
     
 }
 .instructions-container {
-    margin-top: 5rem;
+    margin: 5rem auto;
 }
 
 /* Footer
@@ -143,6 +142,10 @@ html {
     margin: auto;
     width: max-content;
     cursor: pointer;
+
+    a {
+        color: $color-text-p;
+    }
 }
 
 .social-media a {
@@ -326,7 +329,11 @@ html {
     .landing {
         height: 400px;
     }
+    .landing-container {
+        margin-top: 80px;
+    }
     .square {
+        width: 90%;
         margin: auto;
     }
     .info {
